--- a/src/views/Inspection/Inspection.css
+++ b/src/views/Inspection/Inspection.css
@@ -1,14 +1,14 @@
 .Inspection{
   /* padding: 1%; */
-  margin: 1%;
+  padding: 1%;
   margin-bottom: 0;
   display: flex;
   flex-direction: row;
-  /* background-color: lightpink; */
+  /* background-color: #C8E6F0; */
 }
 .Inspection_1{
   width: 30%;
-  /* background-color: magenta; */
+  /* background-color: white; */
   height: 100%;
 }
 .Inspection_2{
@@ -39,6 +39,7 @@
   padding-top: 10px;
   padding: 10px;
   /* height: 100%; */
+  /* background-color: white; */
 }
 .InspectionPatientList_1_1{
   display: flex;
@@ -76,11 +77,11 @@
   top:-1px;
 }
 .InspectionPatientList_list{
-  overflow-y: auto;
+  overflow-y: scroll;
   height: 730px;
 }
 .InspectionPatientListItem:hover {
-  background-color: #00AAF0;
+  background-color: #cff1ff;
   /* color:white; */
   cursor: pointer;
 }
@@ -97,6 +98,7 @@
   /* border: 1px solid black; */
   /* padding-top: 10px; */
   padding: 10px;
+  /* background-color: white; */
 }
 .InspectionList_1_1{
   display: flex;
@@ -118,7 +120,7 @@
   top:-1px;
 }
 .InspectionList_list{
-  overflow-y: auto;
+  overflow-y: scroll;
   height: 730px;
 }
 
@@ -128,7 +130,7 @@
   justify-content: center;
 }
 .InspectionListItem:hover {
-  background-color: #00AAF0;
+  background-color: #cff1ff;
   /* color:white; */
   cursor: pointer;
 }
@@ -233,12 +235,18 @@
 
 /* InspectionBarcodePop */
 .InspectionBarcodePop{
-  margin: 20px;
+  height: 100%;
+}
+.InspectionBarcodePop_title{
+  display: flex;
+  justify-content: center;
+  font-size: large;
+  font-weight: bold;
 }
 .InspectionBarcodePop_1{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 10px;
-  height: 100%;
+  height: 90%;
 }
 .InspectionBarcodePop_1_1{
   display: flex;
