--- a/src/views/Treatment/Treatment.css
+++ b/src/views/Treatment/Treatment.css
@@ -28,6 +28,7 @@
 }
 
 .TreatmentPatientList_title {
+  margin-bottom: 5px;
   font-weight: bold;
   font-size: larger;
 }
@@ -83,7 +84,7 @@
 
 /* TreatmentHistoryList */
 .TreatmentHistoryList {
-  margin-top: 10px;
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
   width: 700px;
@@ -103,17 +104,19 @@
 
 .TreatmentHistoryList_Totaltable{
   overflow-y: auto;
-  height: 353px;
+  height: 355px;
   text-align: center;
 }
 
 /* TreatmentCreateForm*/
 .TreatmentCreateForm {
+
   /* height: 50%; */
   /* margin-left: 20px; */
   /* width: 70%; */
 }
 .TreatmentCreateForm_title {
+  margin-bottom: 5px;
   display: flex;
   /* flex-direction: row; */
   font-weight: bold;
@@ -289,16 +292,17 @@
 }
 
 .TreatmentHistoryRead_title {
+  margin-bottom: 5px;
   font-weight: bold;
   font-size: larger;
   /* margin-left: 20px; */
-  margin-top: 20px;
+  margin-top: 15px;
   
 }
 .TreatmentHistoryRead_border {
   /* display: flex;
   flex-direction: row; */
-  padding: 10px 10px 0 10px;
+  padding: 10px 10px 30px 10px;
   font-size: small;
 }
 .TreatmentHistoryRead_1_table {
@@ -307,28 +311,69 @@
   /* height: 100%;
   width: 750px; */
 }
+.TreatmentHistoryRead_2{
+  height: 250px;
+  /* background-color: burlywood; */
+ margin-top: 15px;
+}
+
+
+.TreatmentHistoryRead_2_Totaltable{
+  font-size: small;
+  overflow-y: auto;
+  height: 205px;
+
+}
+
 .TreatmentHistoryRead_2_title {
-  /* font-weight: bold; */
+  font-weight: bold;
   font-size: medium;
-  
-  margin-top: 20px;
-  margin-bottom: 5px;
+  /* margin-top: px; */
+  margin-bottom: 10px;
 }
 .TreatmentHistoryRead_2_table {
-
+  
+  padding: 10px 10px 0 10px;
   text-align: center;
-  height: 100%;
+  /* height: 20%; */
   width: 750px;
-  border-spacing: 0px;
+  /* border-spacing: 0px; */
 }
 .TreatmentHistoryRead_2_table_thead {
   background-color: lightgray;
 }
-.TreatmentHistoryReadClose{
-  margin-top: 20px;
-  float: right
+
+.TreatmentHistoryRead_3{
+ margin-top: 15px;
+
+  
+    /* margin-top: 20px; */
+    height: 200px;
+    /* background-color: chartreuse; */
+}
+.TreatmentHistoryRead_3_title{
+  margin-bottom: 10px;
+
+  font-size: medium;
+}
+.TreatmentHistoryRead_3_Totaltable{
+  font-size: small;
+  /* padding: 10px 10px 0 10px; */
+  overflow-y: auto;
+  height: 190px;
+
+}
+.TreatmentHistoryRead_3_table{
+  /* overflow-y: auto;
+  height: 150px; */
+
+  text-align: center;
 }
 
+.TreatmentHistoryReadClose{
+  margin-top: 10px;
+  float: right
+}
 
 
 .TreatmentImgRead{
