--- a/src/views/Login.css
+++ b/src/views/Login.css
@@ -1,18 +1,30 @@
 .box {
-  margin-top: 7rem;
+  padding-top: 7rem;
+  height: 850px;
   display: flex;
   justify-content: center;
+  /* background-image: url("https://gs.severance.healthcare/_res/yuhs/gs/img/home/img-visual-patient1@2x_210107.jpg"); */
+  background-size: 100% 100%;
+  /* background-color: #EAEAEA; */
 }
 
 /* 로그인 */
 .Login {
   width: 30rem;
+  margin-right: 4rem;
+  padding-top: 4rem;
+}
+
+.back {
+  background-color: white;
   padding: 1rem;
-  margin-right: 10rem;
-  padding-top: 9rem;
 }
 
 /* 공지사항 */
+.Board {
+  background-color: white;
+  /* padding: 1rem; */
+}
 .Board_title {
   font-size: larger;
   font-weight: bold;
@@ -35,10 +47,10 @@
   transition: 0.4s;
 }
 .Board_tr:hover {
-  background-color: teal;
+  background-color: #cff1ff;
 }
 .active {
-  background-color: slategray;
+  background-color: #cff1ff;
 }
 .Board_content {
   max-height: 0;
