--- a/src/views/User/User.css
+++ b/src/views/User/User.css
@@ -30,6 +30,7 @@
 .UserList_content {
   padding: 10px;
   height: 96.8%;
+  font-size: small;
 }
 
 .UserList_content1 {
@@ -66,8 +67,7 @@
 }
 
 .UserList_tr:hover {
-  background-color: #00AAF0;
-  color:white;
+  background-color: #cff1ff;
   cursor: pointer;
 }
 
@@ -90,4 +90,5 @@
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
+  font-size: small;
 };
