--- a/src/views/Register/components/api/WeatherAPI.css
+++ b/src/views/Register/components/api/WeatherAPI.css
@@ -2,7 +2,7 @@
  .WeatherAPI{
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   flex-grow: 10;
   margin-right: 50px;
@@ -10,8 +10,9 @@
 .WeatherAPI_items {
  display: flex;
  flex-direction: row;
- justify-content: flex-start;
+ justify-content: flex-end;
  align-items: center;
+ margin-right: 30px;
 }
 .WeatherAPI_item {
   display: flex;
