--- a/src/views/Inspection/Inspection.css
+++ b/src/views/Inspection/Inspection.css
@@ -50,9 +50,16 @@
 }
 .InspectionPatientList_1_2_2{
   width: 10%;
+  margin-right: 20px;
 }
-.InspectionPatientList_1_2_2{
-  width:50%;
+.InspectionPatientList_1_2_3{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-grow: 8;
+}
+.InspectionPatientList_1_3_0{
+  
 }
 .InspectionPatientList_1_3_1{
   margin-right: 6px;
