--- a/src/views/Auth/Auth.css
+++ b/src/views/Auth/Auth.css
@@ -7,17 +7,29 @@
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
-
+.Auth_box{
+  width: 90%;
+}
 .Auth_content {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 1.2rem;
   padding-bottom: 0.5rem;
   border-bottom: lightgray solid 0.5px;
 }
 .Auth_content2 {
   display: flex;
   align-items: center;
+}
+
+/* 유효성 검사 */
+.Auth_error {  
+  color: red;
+  font-size: small;
+}
+.Auth_noterror {
+  visibility: hidden;
+  font-size: small;
 }
 
 .Auth > .modal {
@@ -32,9 +44,9 @@
 }
 .Auth > .modal > section {
   width: 100%;
-  /* max-width: 750px;  */
+  max-width: 750px; 
   height: 100%;
-  max-height: 780px;
+  max-height: 910px;
   margin:0 auto;
   border-radius: .3rem;
   background-color: #fff;
