--- a/src/views/Treatment/TreatmentImgModal.css
+++ b/src/views/Treatment/TreatmentImgModal.css
@@ -1,4 +1,4 @@
-.TreatmentImgmodal > .TreatmentImgmodal, .modal {
+.TreatmentImgmodal > .modal {
   display: none;
   position: fixed;
   top: 0;
@@ -10,10 +10,10 @@
 
 }
 
-.TreatmentImgmodal > .TreatmentImgmodal, .modal > .TreatmentImgmodal, section {
+.TreatmentImgmodal > .modal > section {
   /* width: 100%; */
-  width: 500px;
-  max-width: 800px; 
+  width: 1200px;
+  /* max-width: 1000px; */
   margin:0 auto;
   border-radius: .3rem;
   background-color: #fff;
@@ -22,7 +22,7 @@
   overflow: hidden;
 }
 
-.TreatmentImgmodal > .TreatmentImgmodal, .modal.openModal {
+.TreatmentImgmodal > .modal.openModal {
   display: flex;
   align-items: center;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
